src/test/deca/context/invalid/extension/array_dim_not_int.deca
// The dimension of an array has to be give with an integer or nothing
// Description : give a dimension with something other than integer
// Result : error line 7;


{
    int[] x = new int[true];
}